| Bug #14527 | Partitions: table unreadable if partition name = c-cedilla | ||
|---|---|---|---|
| Submitted: | 31 Oct 2005 22:42 | Modified: | 2 Mar 2006 11:15 |
| Reporter: | Peter Gulutzan | ||
| Status: | Closed | ||
| Category: | Server: Partition | Severity: | S3 (Non-critical) |
| Version: | 5.1.2-alpha-debug | OS: | Linux (SUSE 10.0) |
| Assigned to: | Alexander Barkov | Target Version: | |
[31 Oct 2005 22:42]
Peter Gulutzan
[31 Oct 2005 22:50]
Jorge del Conde
I was able to reproduce this using a fresh clone of 5.1 under FC4
[2 Mar 2006 9:30]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/3370
[2 Mar 2006 10:51]
Alexander Barkov
Pushed into 5.1.8
[2 Mar 2006 11:15]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented fix in 5.1.8 changelog; closed.
