  Bug#14527: Partitions: table unreadable if partition name = c-cedilla sql_partition.cc:   Changeing THD charset to utf8 when parsing a frm file. partition_charset.test, partition_charset.result:   new file